--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
 
     <!--css-->
-        <link rel="stylesheet" href="https:unpkg.com/ress/dist/ress.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Philosopher">
         <link rel="stylesheet" href="css/style.css">
         <link rel="icon" type="img/png" href="images/favicon.png">
